# control-endpoint-vms-deploy

./: .gitignore  .gitmodules  README.md  main.tf  outputs.tf  providers.tf  pyproject.toml  script-ct.sh.init  script-ct.sh.socket.init  script-ep.sh.init  script-ep.sh.socket.init  terraform.tfvars.default  variables.tf
.github/workflows/: actions.yaml
docker/: Dockerfile  dckr_net_connector.service
docker/ipsec/: Dockerfile
docker/runner-img/: Dockerfile
scripts/: wait-cloud-init.sh
setup-files-ct/etc/cron.d/: check-cert-vpn-works
setup-files-ct/etc/iptables/: rules.v4  rules.v6
setup-files-ct/etc/sysctl.d/: 90-control-additions.conf
tests/: common.py  decode_config.py  test_brigade.py  test_cloak_openvpn.py  test_config.py  test_connection.py  test_deploy.py  test_keydesk_api.py  test_outline.py  test_wg.py
