[tool.poetry]
name = "control-endpoint-vms-deploy"
version = "0.1.0"
description = ""
authors = ["niktheworker <niktheworker@gmail.com>"]
readme = "README.md"
packages = [{ include = "tests" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
paramiko = "^3.3.1"
requests = {extras = ["socks"], version = "^2.31.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
